<resources>
    <string name="app_name">Android Lab</string>
    <string name="splash_button_text">Start</string>
    <string name="splash_paint_image_dsc">Art Palette</string>
    <string name="splash_title_text">Paint</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_about">About</string>
    <string name="about_image_dsc">Profile Photo</string>
    <string name="about_tv_name">Caio Martins</string>
    <string name="about_tv_dsc">Software Developer | MSc Informatics Engineering Student</string>
    <string name="settings_et_color">Color Hex</string>
    <string name="settings_button_color">Set Background Color</string>
    <string name="main_button_draw">Draw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="palette_background_color">Background Color</string>
    <string name="palette_erase">Erase</string>
    <string name="palette_black">Black</string>
    <string name="palette_red">Red</string>
    <string name="palette_green">Green</string>
    <string name="palette_blue">Blue</string>
    <string name="palette_custom_color_hex">Custom color Hex</string>
    <string name="palette_apply">Apply</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>