<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="274dp"
        android:layout_height="314dp"
        android:contentDescription="@string/splash_paint_image_dsc"
        android:src="@drawable/paint" />

    <Button
        android:id="@+id/main_button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:padding="12dp"
        android:text="@string/main_button_settings" />

    <Button
        android:id="@+id/main_button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:padding="12dp"
        android:text="@string/main_button_about"
        android:onClick="launchAboutActivity"/>

</androidx.appcompat.widget.LinearLayoutCompat>
