<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.AboutActivity">

    <ImageView
        android:id="@+id/about_image"
        android:layout_width="274dp"
        android:layout_height="314dp"
        android:contentDescription="@string/about_image_dsc"
        android:src="@drawable/caio" />

    <TextView
        android:id="@+id/about_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/about_tv_name"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/about_tv_dsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:text="@string/about_tv_dsc"
        android:textAlignment="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>
